--- a/_config.yml
+++ b/_config.yml
@@ -86,12 +86,12 @@ exclude_generator:
 feed:
     type: atom
     path: atom.xml
-    limit: 20
+    limit: false
 
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: git@github.com:oligriffiths/blog.git
+  repo: git@github.com:oligriffiths/oligriffiths.git
   branch: gh-pages
   message: hexo deploy
